# GEOSctm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Externals.cfg  README.md  components.yaml  parallel_build.csh
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: enforce-labels.yml  workflow.yml
Config/: GMAO_Shared.sparse
build-Debug/: CMakeCache.txt
config/: GEOSgcm_GridComp.sparse  GMAO_Shared.sparse
src/: .gitignore  CMakeLists.txt
src/Applications/: CMakeLists.txt
src/Applications/GEOSctm_App/: .GEOSCTM_VERSION  CAP.rc.tmpl  CMakeLists.txt  CTM_GridComp.rc.tmpl  FPIT_ExtData.rc.tmpl  FP_ExtData.rc.tmpl  GEOSCTM.rc.tmpl  GEOSctm.F90  GNUmakefile  HISTORY.GEOSCTM.rc.tmpl  HISTORY.rc.tmpl  HISTORY_MERRA_CFIO.rc.tmpl  MERRA1_ExtData.rc.tmpl  MERRA2_ExtData.rc.tmpl  ctm_convert.j  ctm_moveplot.j  ctm_plot.tmpl  ctm_post.j  ctm_quickplot.csh  ctm_regress.j  ctm_run.j  ctm_setup  fvcore_layout.rc
src/Components/: .gitignore  CMakeLists.txt  GNUmakefile
src/Components/CTMconvection_GridComp/: CTM_ConvectionGridCompMod.F90  CTM_ConvectionStubCompMod.F90  GNUmakefile  GmiConvectionMethod_mod.F90
src/Components/CTMdiffusion_GridComp/: GNUmakefile
src/Components/CTMpTracers_GridComp/: CTM_pTracersGridCompMod.F90  GNUmakefile
src/Components/GEOSctm_GridComp/: .gitignore  CMakeLists.txt  ChangeLog  GEOS_ctmEnvGridComp.F90  GEOS_ctmGridCompMod.F90  GEOS_ctmHistGridComp.F90
src/Components/GEOSctm_GridComp/CTMconvection_GridComp/: CMakeLists.txt  CTM_ConvectionGridCompMod.F90  CTM_rasCalculationsMod.F90  GenericConvectionMethod_mod.F90  GmiConvectionMethod_mod.F90  convectiveTransport_mod.F90
src/Components/GEOSctm_GridComp/CTMdiffusion_GridComp/: CMakeLists.txt  CTM_DiffusionGridCompMod.F90  CTM_DiffusionStubCompMod.F90  GmiDiffusionMethod_mod.F90  updateDiffusion_mod.F90
src/Components/GEOSctm_GridComp/CTMpTracers_GridComp/: CMakeLists.txt  CTM_pTracersGridCompMod.F90  CTM_pTracersStubCompMod.F90  pTracers_GridComp.rc  pTracers_Registry.rc
src/Shared/: .gitignore  CMakeLists.txt
